force-app/main/default/objects/Nurse__c/Nurse__c.object-meta.xml
<CustomObject>
    <label>Nurse</label>
    <nameField>
        <displayFormat>NID - {00000}</displayFormat>
        <label>Nurse Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nurses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>