force-app/main/default/objects/Nurse__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>APRN</fullName>
            </value>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>BSN</fullName>
            </value>
            <value>
                <fullName>DNP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>