force-app/main/default/objects/Nurse__c/fields/Nurse_Name__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Name__c</fullName>
    <label>Nurse Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>