force-app/main/default/objects/Nurse__c/fields/Ward_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Ward_Assigned_To__c</fullName>
    <label>Ward Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ward A</fullName>
            </value>
            <value>
                <fullName>Ward B</fullName>
            </value>
            <value>
                <fullName>Ward C</fullName>
            </value>
            <value>
                <fullName>Ward D</fullName>
            </value>
            <value>
                <fullName>Ward E</fullName>
            </value>
            <value>
                <fullName>Ward F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>